# eter-prisma

./: .gitignore  Cargo.toml  README.md
docs/: DESIGN.md  LAUNCH_DRAFTS.md  RELEASE_NOTES.md  RELEASE_NOTES_1.0.1.md  RELEASE_NOTES_1.0.2.md
installer/: eter-prisma.iss  qa-preview.iss
scripts/: golden_gen.py
src/: gui.html  lib.rs
src/dsp/: conv.rs  kernel.rs
tests/: golden.rs  matrix.rs
