[package]
name = "eter_prisma"
version = "1.0.2"
edition = "2021"
authors = ["Juan Cruz Maisú"]
license = "GPL-3.0-or-later"
homepage = "https://jcmaisu.tech"
description = "PRISMA — dispersión espectral con curva de group-delay exacta. The first ÉTER device."

[workspace]
members = ["xtask"]
exclude = ["vendor"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
# GUI webview: bloqueada hasta portar vendor/nih-plug-webview a baseview/rwh
# actuales (hallazgo del spike F0, ver docs/DESIGN.md). Plan B: VIZIA.
webview = ["dep:nih_plug_webview", "dep:serde_json"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_webview = { path = "vendor/nih-plug-webview", optional = true }
serde_json = { version = "1", optional = true }
realfft = "3"
crossbeam-channel = "0.5"

[dev-dependencies]
hound = "3"

[profile.release]
lto = "thin"
strip = "symbols"
